--- a/app/src/main/res/layout/main_activity_adapter.xml
+++ b/app/src/main/res/layout/main_activity_adapter.xml
@@ -34,19 +34,18 @@
                     android:layout_height="200dp"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/pic1"
-                    android:focusable="true"
-                    android:background="?attr/selectableItemBackgroundBorderless" />
+                    android:src="@drawable/placeholder"
+                    android:focusable="true"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tvItem"
@@ -59,29 +58,40 @@
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
                             android:textSize="12sp"
-                            android:fontFamily="@font/poppins_medium"
-                            android:background="?attr/selectableItemBackgroundBorderless" />
+                            android:fontFamily="@font/poppins_medium"/>
 
-                        <TextView
-                            android:id="@+id/tvItemPrice"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="30dp"
-                            android:layout_marginBottom="5dp"
-                            android:gravity="left"
-                            android:text="PKR300"
-                            android:textAllCaps="true"
-                            android:textColor="@android:color/white"
-                            android:textSize="15sp"
-                            android:fontFamily="@font/poppins_medium"
-                            android:background="?attr/selectableItemBackgroundBorderless" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
+                        <TextView
+                            android:id="@+id/tvItemPrice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:gravity="start"
+                            android:text="PKR300"
+                            android:textAllCaps="true"
+                            android:textColor="@android:color/white"
+                            android:textSize="12sp"
+                            android:fontFamily="@font/poppins_medium"/>
 
+                        <TextView
+                            android:id="@+id/tvItemSchedule"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="2.5dp"
+                            android:gravity="end"
+                            android:layout_gravity="bottom"
+                            android:text="Available from: 9am to 2pm"
+                            android:textAllCaps="true"
+                            android:textColor="@android:color/white"
+                            android:textSize="12sp"
+                            android:fontFamily="@font/poppins_medium"/>
 
                     </LinearLayout>
 
