--- a/app/src/main/res/menu/orders.xml
+++ b/app/src/main/res/menu/orders.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/orders"
+        android:id="@+id/pendingOrders"
         android:title="Orders" />
+
+    <item
+        android:id="@+id/deliveredOrders"
+        android:title="Delivered Orders" />
 
 </menu>
