--- a/app/src/main/res/layout/activity_completed_orders.xml
+++ b/app/src/main/res/layout/activity_completed_orders.xml
@@ -11,9 +11,9 @@
         android:layout_height="40dp"
         android:text="Your orders will be here!"
         android:gravity="center"
-        android:textColor="#F64C15"
+        android:textColor="@color/textColor"
         android:textSize="16dp"
-        android:background="#FBC9B8"
+        android:background="@color/textBackColor"
         app:layout_constraintVertical_bias="0.010"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
