--- a/app/src/main/res/layout/activity_find_driver.xml
+++ b/app/src/main/res/layout/activity_find_driver.xml
@@ -8,8 +8,70 @@
 
     <fragment
         android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:layout_height="wrap_content"
+        map:layout_constraintBottom_toTopOf="@+id/layout"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/textBackColor"
+        android:visibility="gone"
+        map:layout_constraintVertical_bias="0.999"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/driverImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:padding="5dp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/driverName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:text="Your Driver"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:padding="5dp"
+                android:textColor="@color/textColor"
+                android:background="@color/textBackColor"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"/>
+
+            <TextView
+                android:id="@+id/driverPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="Your Driver"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:padding="5dp"
+                android:textColor="@color/textColor"
+                android:background="@color/textBackColor"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
