--- a/app/src/main/res/layout/activity_find_driver.xml
+++ b/app/src/main/res/layout/activity_find_driver.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,107 +7,34 @@
     android:layout_height="match_parent"
     tools:context=".FindDriver" >
 
-    <RelativeLayout
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        map:layout_constraintBottom_toTopOf="@+id/cardView"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent" />
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintTop_toTopOf="parent"
+        map:layout_constraintVertical_bias="0.999">
+
+        <Button
+            android:id="@+id/btnPickupRequest"
+            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/card"/>
+            android:layout_height="55dp"
+            android:layout_margin="20dp"
+            android:text="Pickup Request"
+            android:textStyle="bold"
+            android:backgroundTint="@color/myColor"/>
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:id="@+id/card"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            map:cardElevation="10dp">-->
+    </androidx.cardview.widget.CardView>
 
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/ivArrow"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:src="@drawable/arrow"-->
-<!--                    android:layout_alignParentRight="true"/>-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/btnPickup"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    style="@style/Widget.MaterialComponents.Button"-->
-<!--                    android:layout_margin="10dp"-->
-<!--                    android:text="Pickup Request"-->
-<!--                    android:layout_below="@id/ivArrow"/>-->
-
-<!--            </RelativeLayout>-->
-
-<!--        </androidx.cardview.widget.CardView>-->
-
-    </RelativeLayout>
-
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:background="@color/textBackColor"-->
-<!--        android:visibility="gone"-->
-<!--        map:layout_constraintVertical_bias="0.999"-->
-<!--        map:layout_constraintBottom_toBottomOf="parent"-->
-<!--        map:layout_constraintEnd_toEndOf="parent"-->
-<!--        map:layout_constraintStart_toStartOf="parent"-->
-<!--        map:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <de.hdodenhof.circleimageview.CircleImageView-->
-<!--            android:id="@+id/driverImage"-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="100dp"-->
-<!--            android:padding="5dp" />-->
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:layout_gravity="center_vertical">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/driverName"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="3dp"-->
-<!--                android:text="Your Driver"-->
-<!--                android:textSize="16dp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:padding="5dp"-->
-<!--                android:textColor="@color/textColor"-->
-<!--                android:background="@color/textBackColor"-->
-<!--                android:layout_gravity="center_vertical"-->
-<!--                android:layout_marginStart="10dp"/>-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/driverPhone"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="3dp"-->
-<!--                android:text="Your Driver"-->
-<!--                android:textSize="16dp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:padding="5dp"-->
-<!--                android:textColor="@color/textColor"-->
-<!--                android:background="@color/textBackColor"-->
-<!--                android:layout_gravity="center_vertical"-->
-<!--                android:layout_marginStart="10dp"/>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </LinearLayout>-->
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
