--- a/app/src/main/res/layout/activity_request_driver.xml
+++ b/app/src/main/res/layout/activity_request_driver.xml
@@ -6,16 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/main_layout"
     tools:context=".RequestDriverActivity">
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_above="@+id/ConfirmLayout">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/fillMaps"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="#33333333"/>
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/ConfirmLayout"
@@ -26,6 +41,8 @@
         <include layout="@layout/layout_confirm_rider"/>
 
         <include layout="@layout/layout_confirm_pickup"/>
+
+        <include layout="@layout/finding_your_rider"/>
 
     </FrameLayout>
 
