--- a/app/src/main/res/layout/activity_request_driver.xml
+++ b/app/src/main/res/layout/activity_request_driver.xml
@@ -44,6 +44,8 @@
 
         <include layout="@layout/finding_your_rider"/>
 
+        <include layout="@layout/layout_driver_info"/>
+
     </FrameLayout>
 
 <!--    <Button-->
