--- a/app/src/main/res/layout/pickup_info_window.xml
+++ b/app/src/main/res/layout/pickup_info_window.xml
@@ -16,19 +16,27 @@
         android:paddingBottom="8dp"
         android:layout_gravity="center_vertical"
         android:textColor="@android:color/white"
-        android:layout_marginStart="20dp"
         android:background="@drawable/pickup_rounded_corner"/>
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="2dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/myColor"/>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/pickup_icon"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/myColor"/>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/pickup_icon"
+            android:background="@android:color/transparent"/>
+
+    </FrameLayout>
+
 
 </LinearLayout>
