--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -114,7 +114,7 @@
                 android:background="@android:color/transparent"
                 android:gravity="center_vertical"
                 android:padding="10dp"
-                android:src="@drawable/placeholder"
+                android:src="@drawable/food_placeholder"
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true" />
 
