--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/placeholder"/>
+            android:src="@drawable/food_placeholder"/>
 
         <TextView
             android:layout_width="wrap_content"
