--- a/app/src/main/res/layout/edit_details.xml
+++ b/app/src/main/res/layout/edit_details.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +71,7 @@
         android:elevation="5dp"
         android:text="Add"
         android:textSize="16dp"
+        android:textColor="@color/white"
         android:layout_gravity="center"
         app:cornerRadius="10dp"
         style="@style/Widget.MaterialComponents.Button" />
